[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.0" }
serde = { version = "1", features = ["derive"] }
fhe = { path = "../lib/fhe/crates/fhe" }
fhe-traits = { path = "../lib/fhe/crates/fhe-traits" }
rand = "0.8.5"
console = "0.15.7"
bincode = "1.3.3"
