[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.0", default-features = false, features = [ "std" ] }
rand = "0.8.5"
fhe = { path = "../../lib/fhe/crates/fhe" }
fhe-traits = { path = "../../lib/fhe/crates/fhe-traits" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
